--- a/src/app/modules/shared/components/seletor-imagem/seletor-imagem.component.html
+++ b/src/app/modules/shared/components/seletor-imagem/seletor-imagem.component.html
@@ -2,7 +2,7 @@
     <div class="drop-area d-flex flex-column justify-content-center" appUpload>
         <span class="drop-icon mx-auto"></span>
         <div class="text-center mt-1">{{ "textoSeletorImagem" | translate }}</div>
-        <div class="text-center mt-1">{{ "textoSeletorImagem2" | translate }}</div>
+        <strong class="text-center mt-1">{{ "textoSeletorImagem2" | translate }}</strong>
         <button mat-raised-button class="light-button mt-3 mx-auto" (click)="fileInput.click()">
             {{ "selecionararquivo" | translate }}
         </button>
