--- a/src/styles.scss
+++ b/src/styles.scss
@@ -262,3 +262,31 @@ mat-dialog-container {
 .fixed-top {
   z-index: 999 !important;
 }
+
+.col-md-auto {
+  width: fit-content !important;
+
+  @media (max-width: 600px) {
+    width: 100% !important;
+
+    mat-button-toggle-group {
+      width: 100%;
+    }
+
+    mat-button-toggle {
+      flex: 1 1 100%;
+      box-sizing: border-box;
+      align-items: center;
+      flex-direction: row;
+      display: flex;
+    }
+  }
+}
+
+#button-col {
+  @media (max-width: 768px) {
+    .light-button {
+      width: 100%;
+    }
+  }
+}
