--- a/src/app/modules/pedido/components/mesas-card/mesas-card.component.html
+++ b/src/app/modules/pedido/components/mesas-card/mesas-card.component.html
@@ -1,1 +1,24 @@
-<p>mesas-card works!</p>
+<div class="row">
+    <div class="col-xl-3 col-lg-4 col-md-6 col-12 px-2 pt-0 pb-2" *ngFor='let mesa of mesas'>
+        <div class="dark-card">
+            <div class="card-header">
+                <div class="d-flex justify-content-between">
+                    <div>
+                        <h3 class="mb-0 font-weight-bold">{{ mesa.nome }}</h3>
+                        <small class="mb-0 text-muted">{{ "codigo" | translate }}: {{ mesa.codigo }}</small><br>
+                        <small class="mb-0 text-muted">{{ "ocupada" | translate }}: {{ (mesa.ocupada ? "sim" : "nao") |
+                            translate }}</small>
+                    </div>
+                    <div>
+                        <span *ngIf="mesa.ocupada" class="badge rounded-circle text-bg-danger">
+                            <mat-icon>block</mat-icon>
+                        </span>
+                        <span *ngIf="!mesa.ocupada" class="badge rounded-circle text-bg-success">
+                            <mat-icon>check</mat-icon>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
