--- a/src/app/modules/pedido/components/pedidos/pedidos.component.html
+++ b/src/app/modules/pedido/components/pedidos/pedidos.component.html
@@ -17,26 +17,8 @@
   <app-pedidos-tabela *ngIf="viewTipo == 1" [pedidos]="pedidos"></app-pedidos-tabela>
 
   <div class="d-flex justify-content-center w-100">
-    <div class="paginator d-flex align-items-center">
-      <mat-form-field appearance="legacy" class="pages">
-        <mat-select [(ngModel)]="quantidade">
-          <mat-option [value]="15">15 {{ "porPagina" | translate }}</mat-option>
-          <mat-option [value]="50">50 {{ "porPagina" | translate }}</mat-option>
-          <mat-option [value]="100">100 {{ "porPagina" | translate }}</mat-option>
-        </mat-select>
-      </mat-form-field>
-      <button mat-icon-button matSuffix>
-        <mat-icon>keyboard_arrow_left</mat-icon>
-      </button>
-      <strong class="items">
-        <mat-form-field appearance="legacy">
-          <input matInput [(ngModel)]="pagina">
-        </mat-form-field>
-        de {{ paginas }}
-      </strong>
-      <button mat-icon-button matSuffix>
-        <mat-icon>keyboard_arrow_right</mat-icon>
-      </button>
-    </div>
+    <app-paginator [pagina]="pagina" [quantidade]="quantidade" [paginas]="paginas"
+      (paginaEvent)="onPaginaChange($event)" (quantidadeEvent)="onQuantidadeChange($event)">
+    </app-paginator>
   </div>
 </div>
