--- a/src/app/modules/pedido/components/pedidos-card/pedidos-card.component.html
+++ b/src/app/modules/pedido/components/pedidos-card/pedidos-card.component.html
@@ -24,7 +24,7 @@
                 <div class="card-list">
                     <div class="p-2" *ngFor="let produto of pedido.produtos">
                         <div class="d-flex">
-                            <img class="my-auto pe-2"
+                            <img class="rounded-circle me-2"
                                 src="{{ produto.imagem ? produto.imagem : '../../../../../assets/images/icons/hamburger.svg'}}"
                                 alt="product-image" height="32">
                             <div class="flex-grow-1">
