--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,13 +1,13 @@
 $color-header-dark-blue: #09141d;
-$color-dark-card-border: #192A38;
-$color-light-button: #F5F5F5F5;
+$color-dark-card-border: #192a38;
+$color-light-button: #f5f5f5f5;
 $color-opacity-background: #00000067;
 
 $color-dark-blue: #102434;
 $color-dark-blue-checked: #09141d;
-$color-dark: #050C11;
-$color-light: #F5F5F5;
-$color-gold: #FCA406;
-$color-blue: #057ADA;
-$color-gray: #635F5F;
-$color-pink: #F43C5C;
+$color-dark: #050c11;
+$color-light: #f5f5f5;
+$color-gold: #fca406;
+$color-blue: #057ada;
+$color-gray: #635f5f;
+$color-pink: #f43c5c;
