--- a/src/app/modules/inventario/components/inventario/inventario.component.html
+++ b/src/app/modules/inventario/components/inventario/inventario.component.html
@@ -1,1 +1,23 @@
-<p>inventario works!</p>
+<div class="d-flex justify-content-between">
+  <div class="main-title pb-3">{{ "inventario" | translate }}</div>
+  <div>
+    <mat-button-toggle-group id="toggle-group">
+      <mat-button-toggle [checked]="viewTipo == 0" (change)="viewTipo = 0" aria-label="Text align left">
+        <mat-icon>grid_on</mat-icon> {{ "visualizarComoCards" | translate }}
+      </mat-button-toggle>
+      <mat-button-toggle [checked]="viewTipo == 1" (change)="viewTipo = 1" aria-label="Text align center">
+        <mat-icon> table_chart</mat-icon> {{ "visualizarComoTabela" | translate }}
+      </mat-button-toggle>
+    </mat-button-toggle-group>
+  </div>
+</div>
+
+<div class="opacity-background rounded-1 p-3 mt-2">
+  <app-inventario-card [inventarios]="inventarios" *ngIf="viewTipo == 0"></app-inventario-card>
+  <app-inventario-tabela [inventarios]="inventarios" *ngIf="viewTipo == 1"></app-inventario-tabela>
+  <div class="d-flex justify-content-center w-100">
+    <app-paginator [pagina]="pagina" [quantidade]="quantidade" [paginas]="paginas"
+      (paginaEvent)="onPaginaChange($event)" (quantidadeEvent)="onQuantidadeChange($event)">
+    </app-paginator>
+  </div>
+</div>
