--- a/src/app/modules/pedido/components/pedidos-tabela/pedidos-tabela.component.html
+++ b/src/app/modules/pedido/components/pedidos-tabela/pedidos-tabela.component.html
@@ -1,65 +1,71 @@
-<table mat-table [dataSource]="pedidosDataSource" matSort class="w-100 mb-2">
+<div class="scroll-table">
+  <table mat-table [dataSource]="pedidosDataSource" matSort class="w-100 mb-2">
     <ng-container matColumnDef="pedido">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Pedido
-        </th>
-        <td mat-cell *matCellDef="let element" class="count"> Pedido: {{ element.codigo }} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ "pedido" | translate }}
+      </th>
+      <td mat-cell *matCellDef="let element" class="status-bar"
+        [ngClass]="{'blue': element.status == 0, 'orange': element.status == 1, 'green': element.status == 2, 'red': element.status == 3}">
+        {{ "pedido" | translate }}: {{ element.codigo }} </td>
     </ng-container>
 
     <ng-container matColumnDef="data">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Data
-        </th>
-        <td mat-cell *matCellDef="let element"> {{ element.cliente }}
-            <span class="info">
-                {{ element.data | date: "dd/MM/yy HH:mm:ss" }}
-            </span>
-        </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ "data" | translate }}
+      </th>
+      <td mat-cell *matCellDef="let element"> {{ element.cliente }}
+        <span class="info">
+          {{ element.data | date: "dd/MM/yy HH:mm:ss" }}
+        </span>
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="quantidadeItens">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Quantidade de Itens
-        </th>
-        <td mat-cell *matCellDef="let element" class="count"> {{ element.quantidadeItens }}x itens </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ "quantidadeItens" | translate }}
+      </th>
+      <td mat-cell *matCellDef="let element"> {{ element.quantidadeItens }}x itens </td>
     </ng-container>
 
     <ng-container matColumnDef="valorTotal">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Valor Total
-        </th>
-        <td mat-cell *matCellDef="let element" class="count"> {{ element.valorTotal | number: "1.2-2" }} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ "valorTotal" | translate }}
+      </th>
+      <td mat-cell *matCellDef="let element"> {{ element.valorTotal | number: "1.2-2" }} </td>
     </ng-container>
 
     <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-center">
-            Status
-        </th>
-        <td mat-cell *matCellDef="let element" class="text-center">
-            <span *ngIf="element.status == 0" class="badge rounded-pill text-bg-primary">{{ "naoIniciado" | translate
-                }}</span>
-            <span *ngIf="element.status == 1" class="badge rounded-pill text-bg-warning">{{ "emPreparacao" | translate
-                }}</span>
-            <span *ngIf="element.status == 2" class="badge rounded-pill text-bg-success">{{ "entregue" | translate
-                }}</span>
-            <span *ngIf="element.status == 3" class="badge rounded-pill text-bg-danger">{{ "cancelado" | translate
-                }}</span>
-        </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-center">
+        {{ "status" | translate }}
+      </th>
+      <td mat-cell *matCellDef="let element" class="text-center">
+        <span *ngIf="element.status == 0" class="badge rounded-pill text-bg-primary">{{ "naoIniciado" |
+          translate
+          }}</span>
+        <span *ngIf="element.status == 1" class="badge rounded-pill text-bg-warning">{{ "emPreparacao" |
+          translate
+          }}</span>
+        <span *ngIf="element.status == 2" class="badge rounded-pill text-bg-success">{{ "entregue" | translate
+          }}</span>
+        <span *ngIf="element.status == 3" class="badge rounded-pill text-bg-danger">{{ "cancelado" | translate
+          }}</span>
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="acao">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
 
-        </th>
-        <td mat-cell *matCellDef="let element">
-            <div class="d-flex flex-row-reverse">
-                <button mat-stroked-button class="light-button table-button ms-2">
-                    <mat-icon>search</mat-icon> {{ 'detalhes' | translate }}
-                </button>
-            </div>
-        </td>
+      </th>
+      <td mat-cell *matCellDef="let element">
+        <div class="d-flex flex-row-reverse">
+          <button mat-stroked-button class="light-button table-button ms-2">
+            <mat-icon>search</mat-icon> {{ 'detalhes' | translate }}
+          </button>
+        </div>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+  </table>
+</div>
