--- a/src/app/modules/preparacao/components/preparacao/preparacao.component.scss
+++ b/src/app/modules/preparacao/components/preparacao/preparacao.component.scss
@@ -1,40 +1,20 @@
-@import '/src/assets/styles/variables.scss';
-
-.status-bar {
-    border: unset;
-    border-top: solid 16px;
-    &.blue {
-        border-top-color: blue;
-    }
-
-    &.orange {
-        border-top-color: orange;
-    }
-
-    &.green {
-        border-top-color: green;
-    }
-
-    &.red {
-        border-top-color: red;
-    }
-}
+@import "/src/assets/styles/variables.scss";
 
 .item-list {
-    max-height: 6rem;
-    min-height: 6rem;
-    overflow-y: scroll;
+  max-height: 6rem;
+  min-height: 6rem;
+  overflow-y: scroll;
 }
 
 .prepare-title-list {
-    font-size: 16px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    background-color: $color-dark-blue;
+  font-size: 16px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  background-color: $color-dark-blue;
 }
 
 .prepare-background-list {
-    background-color: $color-opacity-background;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+  background-color: $color-opacity-background;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
