--- a/src/app/modules/receita/components/ingredientes-tabela/ingredientes-tabela.component.html
+++ b/src/app/modules/receita/components/ingredientes-tabela/ingredientes-tabela.component.html
@@ -1,52 +1,56 @@
-<table mat-table [dataSource]="ingredientesDataSource" matSort class="w-100 mb-2">
+<div class="scroll-table">
+  <table mat-table [dataSource]="ingredientesDataSource" matSort class="w-100 mb-2">
     <ng-container matColumnDef="nome">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Ingrediente
-        </th>
-        <td mat-cell *matCellDef="let element">
-            <img class="rounded-circle me-2" [src]="element.imagem" alt="element.nome" width="40">{{ element.nome }}
-        </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        Ingrediente
+      </th>
+      <td mat-cell *matCellDef="let element">
+        <img class="rounded-circle me-2"
+          src="{{ element.imagem ? element.imagem : '../../../../../assets/images/icons/hamburger.svg'}}"
+          alt="element.nome" width="40">{{ element.nome }}
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="unidadeMedida">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-center">
-            Unidade de Medida
-        </th>
-        <td mat-cell *matCellDef="let element" class="text-center">
-            {{ element.unidadeMedida }}
-        </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-center">
+        Unidade de Medida
+      </th>
+      <td mat-cell *matCellDef="let element" class="text-center">
+        {{ element.unidadeMedida }}
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="descricao">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Descricao
-        </th>
-        <td mat-cell *matCellDef="let element"> {{ element.descricao }} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        Descricao
+      </th>
+      <td mat-cell *matCellDef="let element"> {{ element.descricao }} </td>
     </ng-container>
 
     <ng-container matColumnDef="preco">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-center">
-            Preço
-        </th>
-        <td mat-cell *matCellDef="let element" class="text-center"> {{ element.valor | number: "1.2-2" }} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-center">
+        Preço
+      </th>
+      <td mat-cell *matCellDef="let element" class="text-center"> {{ element.valor | number: "1.2-2" }} </td>
     </ng-container>
 
     <ng-container matColumnDef="acao">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
 
-        </th>
-        <td mat-cell *matCellDef="let element">
-            <div class="d-flex flex-row-reverse">
-                <button mat-raised-button class="pink-button table-button ms-2">
-                    <mat-icon>delete</mat-icon> {{ 'remover' | translate }}
-                </button>
-                <button mat-raised-button class="blue-button table-button ms-2">
-                    <mat-icon>edit</mat-icon> {{ 'editar' | translate }}
-                </button>
-            </div>
-        </td>
+      </th>
+      <td mat-cell *matCellDef="let element">
+        <div class="d-flex flex-row-reverse">
+          <button mat-raised-button class="pink-button table-button ms-2">
+            <mat-icon>delete</mat-icon> {{ 'remover' | translate }}
+          </button>
+          <button mat-raised-button class="blue-button table-button ms-2">
+            <mat-icon>edit</mat-icon> {{ 'editar' | translate }}
+          </button>
+        </div>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+  </table>
+</div>
