--- a/src/app/modules/receita/components/receita-card/receita-card.component.html
+++ b/src/app/modules/receita/components/receita-card/receita-card.component.html
@@ -4,8 +4,9 @@
             <div class="card-header">
                 <div class="d-flex justify-content-between align-items-center">
                     <th>
-                        <img class="rounded-circle me-2" [src]="receita.imagem" alt="element.nome" width="40"
-                            height="40">
+                        <img class="rounded-circle me-2"
+                            src="{{ receita.imagem ? receita.imagem : '../../../../../assets/images/icons/hamburger.svg'}}"
+                            alt="element.nome" width="40" height="40">
                         {{ receita.nome }}
                     </th>
                     <div class="h-100">
