--- a/src/app/modules/receita/components/receita-tabela/receita-tabela.component.html
+++ b/src/app/modules/receita/components/receita-tabela/receita-tabela.component.html
@@ -1,59 +1,61 @@
 <div class="scroll-table">
-    <table mat-table [dataSource]="receitasDataSource" matSort class="w-100 mb-2">
-        <ng-container matColumnDef="nome">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                Receita
-            </th>
-            <td mat-cell *matCellDef="let element">
-                <img class="rounded-circle me-2" [src]="element.imagem" alt="element.nome" width="40" height="40">{{
-                element.nome }}
-            </td>
-        </ng-container>
+  <table mat-table [dataSource]="receitasDataSource" matSort class="w-100 mb-2">
+    <ng-container matColumnDef="nome">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ "receita" | translate }}
+      </th>
+      <td mat-cell *matCellDef="let element">
+        <img class="rounded-circle me-2"
+          src="{{ element.imagem ? element.imagem : '../../../../../assets/images/icons/hamburger.svg'}}"
+          alt="element.nome" width="40" height="40">{{
+        element.nome }}
+      </td>
+    </ng-container>
 
-        <ng-container matColumnDef="descricao">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                Descricao
-            </th>
-            <td mat-cell *matCellDef="let element"> {{ element.descricao }} </td>
-        </ng-container>
+    <ng-container matColumnDef="descricao">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ "descricao" | translate }}
+      </th>
+      <td mat-cell *matCellDef="let element"> {{ element.descricao }} </td>
+    </ng-container>
 
-        <ng-container matColumnDef="quantidadeIngredientes">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-center">
-                Quantidade de Ingrendientes
-            </th>
-            <td mat-cell *matCellDef="let element" class="text-center">
-                {{ element.ingredientes.length }}
-            </td>
-        </ng-container>
+    <ng-container matColumnDef="quantidadeIngredientes">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-center">
+        {{ "quantidadeIngredientes" | translate }}
+      </th>
+      <td mat-cell *matCellDef="let element" class="text-center">
+        {{ element.ingredientes.length }}
+      </td>
+    </ng-container>
 
-        <ng-container matColumnDef="valorIngredientes">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-center">
-                Valor Total dos Ingredientes
-            </th>
-            <td mat-cell *matCellDef="let element" class="text-center"> {{ getValorTotal(element.ingredientes) | number:
-                "1.2-2" }} </td>
-        </ng-container>
+    <ng-container matColumnDef="valorIngredientes">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-center">
+        {{ "valorTotalIngredientes" | translate }}
+      </th>
+      <td mat-cell *matCellDef="let element" class="text-center"> {{ getValorTotal(element.ingredientes) | number:
+        "1.2-2" }} </td>
+    </ng-container>
 
-        <ng-container matColumnDef="acao">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>
+    <ng-container matColumnDef="acao">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
 
-            </th>
-            <td mat-cell *matCellDef="let element">
-                <div class="d-flex flex-row-reverse">
-                    <button mat-raised-button class="pink-button table-button ms-2">
-                        <mat-icon>delete</mat-icon> {{ 'remover' | translate }}
-                    </button>
-                    <button mat-raised-button class="blue-button table-button ms-2">
-                        <mat-icon>edit</mat-icon> {{ 'editar' | translate }}
-                    </button>
-                    <button mat-stroked-button class="light-button table-button ms-2">
-                        <mat-icon>search</mat-icon> {{ 'detalhes' | translate }}
-                    </button>
-                </div>
-            </td>
-        </ng-container>
+      </th>
+      <td mat-cell *matCellDef="let element">
+        <div class="d-flex flex-row-reverse">
+          <button mat-raised-button class="pink-button table-button ms-2">
+            <mat-icon>delete</mat-icon> {{ 'remover' | translate }}
+          </button>
+          <button mat-raised-button class="blue-button table-button ms-2">
+            <mat-icon>edit</mat-icon> {{ 'editar' | translate }}
+          </button>
+          <button mat-stroked-button class="light-button table-button ms-2">
+            <mat-icon>search</mat-icon> {{ 'detalhes' | translate }}
+          </button>
+        </div>
+      </td>
+    </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
 </div>
