--- a/src/app/modules/pedido/components/mesas-card/mesas-card.component.html
+++ b/src/app/modules/pedido/components/mesas-card/mesas-card.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xl-3 col-lg-4 col-md-6 col-12 px-2 pt-0 pb-2" *ngFor='let mesa of mesas'>
-        <div class="dark-card">
+        <div class="dark-card status-bar" [ngClass]="{'green': !mesa.ocupada, 'red': mesa.ocupada}">
             <div class="card-header">
                 <div class="d-flex justify-content-between">
                     <div>
