--- a/src/app/modules/pedido/components/pedidos-card/pedidos-card.component.html
+++ b/src/app/modules/pedido/components/pedidos-card/pedidos-card.component.html
@@ -1,6 +1,7 @@
 <div class="row">
     <div class="col-xl-3 col-lg-4 col-md-6 col-12 px-2 pt-0 pb-2" *ngFor='let pedido of pedidos'>
-        <div class="dark-card">
+        <div class="dark-card status-bar"
+            [ngClass]="{'blue': pedido.status == 0, 'orange': pedido.status == 1, 'green': pedido.status == 2, 'red': pedido.status == 3}">
             <div class="card-header">
                 <div class="d-flex justify-content-between">
                     <div>
