--- a/src/app/modules/receita/components/ingredientes-tabela/ingredientes-tabela.component.html
+++ b/src/app/modules/receita/components/ingredientes-tabela/ingredientes-tabela.component.html
@@ -2,7 +2,7 @@
   <table mat-table [dataSource]="ingredientesDataSource" matSort class="w-100 mb-2">
     <ng-container matColumnDef="nome">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Ingrediente
+        {{ "ingrediente" | translate }}
       </th>
       <td mat-cell *matCellDef="let element">
         <img class="rounded-circle me-2"
@@ -13,7 +13,7 @@
 
     <ng-container matColumnDef="unidadeMedida">
       <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-center">
-        Unidade de Medida
+        {{ "unidadeMedida" | translate }}
       </th>
       <td mat-cell *matCellDef="let element" class="text-center">
         {{ element.unidadeMedida }}
@@ -22,14 +22,14 @@
 
     <ng-container matColumnDef="descricao">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Descricao
+        {{ "descricao" | translate }}
       </th>
       <td mat-cell *matCellDef="let element"> {{ element.descricao }} </td>
     </ng-container>
 
     <ng-container matColumnDef="preco">
       <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-center">
-        Preço
+        {{ "valor" | translate }}
       </th>
       <td mat-cell *matCellDef="let element" class="text-center"> {{ element.valor | number: "1.2-2" }} </td>
     </ng-container>
