Modal de confirmação

--- a/src/app/modules/pedido/components/mesas/mesas.component.html
+++ b/src/app/modules/pedido/components/mesas/mesas.component.html
@@ -1,14 +1,23 @@
 <div class="d-flex justify-content-between">
   <div class="main-title pb-3">{{ "mesas" | translate }}</div>
-  <div>
-    <mat-button-toggle-group id="toggle-group">
-      <mat-button-toggle [checked]="viewTipo == 0" (change)="viewTipo = 0" aria-label="Text align left">
-        <mat-icon>grid_on</mat-icon> {{ "visualizarComoCards" | translate }}
-      </mat-button-toggle>
-      <mat-button-toggle [checked]="viewTipo == 1" (change)="viewTipo = 1" aria-label="Text align center">
-        <mat-icon> table_chart</mat-icon> {{ "visualizarComoTabela" | translate }}
-      </mat-button-toggle>
-    </mat-button-toggle-group>
+  <div class="col-12 col-md-10">
+    <div class="row d-flex">
+      <div class="col-12 col-md-auto d-flex align-items-center flex-fill flex-row-reverse pb-2" id="button-col">
+        <button mat-stroked-button class="light-button" (click)="addMesa()">
+          {{ "adicionarMesa" | translate }}
+        </button>
+      </div>
+      <div class="col-12 col-md-auto pb-2">
+        <mat-button-toggle-group id="toggle-group">
+          <mat-button-toggle [checked]="viewTipo == 0" (change)="viewTipo = 0" aria-label="Text align left">
+            <mat-icon>grid_on</mat-icon> {{ "visualizarComoCards" | translate }}
+          </mat-button-toggle>
+          <mat-button-toggle [checked]="viewTipo == 1" (change)="viewTipo = 1" aria-label="Text align center">
+            <mat-icon> table_chart</mat-icon> {{ "visualizarComoTabela" | translate }}
+          </mat-button-toggle>
+        </mat-button-toggle-group>
+      </div>
+    </div>
   </div>
 </div>
 
