--- a/src/app/modules/inventario/components/inventario-card/inventario-card.component.html
+++ b/src/app/modules/inventario/components/inventario-card/inventario-card.component.html
@@ -72,10 +72,10 @@
                 </small>
                 <hr>
                 <div class="d-flex flex-row-reverse">
-                    <button mat-raised-button class="pink-button table-button ms-2">
+                    <button mat-raised-button class="pink-button table-button ms-2" (click)="selecionarOpcao(0)">
                         <mat-icon>delete</mat-icon> {{ 'remover' | translate }}
                     </button>
-                    <button mat-raised-button class="blue-button table-button ms-2">
+                    <button mat-raised-button class="blue-button table-button ms-2" (click)="selecionarOpcao(1)">
                         <mat-icon>edit</mat-icon> {{ 'editar' | translate }}
                     </button>
                 </div>
