Atualização nos modais

--- a/src/app/modules/receita/components/ingredientes/ingredientes.component.html
+++ b/src/app/modules/receita/components/ingredientes/ingredientes.component.html
@@ -34,3 +34,5 @@
         </app-paginator>
     </div>
 </div>
+
+<mat-progress-spinner *ngIf="loading" class="spinner" [mode]="'indeterminate'"></mat-progress-spinner>
